--- a/Section_06/pom.xml
+++ b/Section_06/pom.xml
@@ -24,9 +24,9 @@
         </dependency>
     </dependencies>
 
-    <!-- clean building: on initialisation, clean/delete the target(s) before the build -->
     <build>
         <plugins>
+            <!-- clean building: on initialisation, clean/delete the target(s) before the build -->
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
                 <version>3.2.0</version>
@@ -39,6 +39,20 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <!-- make jar executable -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.2</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>HelloWorld</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
             </plugin>
         </plugins>
     </build>
