--- a/Section_09/mb2g-testing-junit4and5/pom.xml
+++ b/Section_09/mb2g-testing-junit4and5/pom.xml
@@ -19,12 +19,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>${junit.version}</version>
@@ -37,7 +31,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <!-- plugin to execute both junit4 and junit5 tests -->
+            <!-- plugin to execute junit3/4 within the new junit5 framework api -->
             <groupId>org.junit.vintage</groupId>
             <artifactId>junit-vintage-engine</artifactId>
             <version>${junit.version}</version>
@@ -50,7 +44,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version> <!-- version with support for junit5 -->
+                <version>3.0.0-M7</version> <!-- 2.22.0 is min version with support for junit5 -->
             </plugin>
         </plugins>
     </build>
