--- a/Section_09/mb2g-testing-junit5/pom.xml
+++ b/Section_09/mb2g-testing-junit5/pom.xml
@@ -37,7 +37,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version> <!-- version with support for junit5 -->
+                <version>3.0.0-M7</version> <!-- Greater than 2.22.0 needed for junit5/4/3 api -->
             </plugin>
         </plugins>
     </build>
