--- a/Section_10/mb2g-mm-maven-coverters/pom.xml
+++ b/Section_10/mb2g-mm-maven-coverters/pom.xml
@@ -11,9 +11,12 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>web-app</module>
         <module>jpa-entities</module>
         <module>from-intellij</module>
         <module>web-api</module>
+        <module>converters</module>
+
     </modules>
 
     <properties>
