--- a/Section_10/mb2g-mm-maven-web-app/web-app/pom.xml
+++ b/Section_10/mb2g-mm-maven-web-app/web-app/pom.xml
@@ -7,11 +7,21 @@
         <groupId>guru.springframework</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>from-intellij</artifactId>
+    <artifactId>web-app</artifactId>
 
-    <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>guru.springframework</groupId>
+            <artifactId>jpa-entities</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>guru.springframework</groupId>
+            <artifactId>web-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
