Section 11: Spring Boot Multi-Module Assignment

--- a/Section_11/mb2g-spring-boot-assignment/pom.xml
+++ b/Section_11/mb2g-spring-boot-assignment/pom.xml
@@ -20,9 +20,8 @@
     <artifactId>spring-boot-mm-json</artifactId>
     <version>${revision}</version>
 
-    <name>mb2g-spring-boot-assignment</name>
+    <name>mb2g-spring-boot-json</name>
     <description>Demo project for Spring Boot</description>
-
 
     <properties>
         <revision>0.0.1-SNAPSHOT</revision>
