--- a/Section_11/mb2g-spring-boot-assignment/web-app/pom.xml
+++ b/Section_11/mb2g-spring-boot-assignment/web-app/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>spring-boot-mm-json</artifactId>
         <version>${revision}</version>
     </parent>
+
     <artifactId>web-app</artifactId>
 
     <dependencies>
@@ -13,6 +14,11 @@
             <groupId>guru.springframework.json</groupId>
             <artifactId>web-model</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
