--- a/Section_16/mb2g-release-plugin-release-plugin-config/pom.xml
+++ b/Section_16/mb2g-release-plugin-release-plugin-config/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>guru.springframework</groupId>
     <artifactId>mb2g-release-plugin</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -33,7 +33,7 @@
 
     <scm>
         <developerConnection>scm:git:git@github.com:freelance-dave/maven-release-plugin</developerConnection>
-      <tag>HEAD</tag>
+      <tag>mb2g-release-plugin-1.2</tag>
   </scm>
 
     <build>
