--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,41 +1,53 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
+ #Use the latest 2.1 version of CircleCI pipeline process engine.
 version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
-  build-and-test:
-    working_directory: ~/Apache_Maven_Beginner_to_Guru/Section_16/mb2g-release-plugin-circleci
+  build-test-deploy:
 
-    # These next lines define a Docker executor: https://circleci.com/docs/2.0/executor-types/
-    # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # Be sure to update the Docker image tag below to openjdk version of your application.
-    # A list of available CircleCI Docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/openjdk
+    # A list of available CircleCI Docker Convenience Images is available here:
+    # https://circleci.com/developer/images/image/cimg/openjdk
     docker:
       - image: cimg/openjdk:19.0
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+
+    working_directory: ~/repo/Section_16/mb2g-release-plugin-circleci
+
+    environment:
+      # Customize the JVM maximum heap limit
+      MAVEN_OPTS: -Xmx3200m
 
     steps:
       # Checkout the code as the first step.
       - checkout:
-          path: ~/Apache_Maven_Beginner_to_Guru
+          path: ~/repo
 
-      # Use mvn clean and package as the standard maven build phase
+      # Download and cache dependencies, if any
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "pom.xml" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+
       - run:
-          name: Build
-          command: mvn -B -DskipTests clean package
-      # Then run your tests!
+          name: Download Dependencies
+          command: mvn dependency:go-offline
+
+      # Cache dependencies for future runs
+      - save_cache:
+          key: v1-dependencies-{{ checksum "pom.xml" }}
+          paths:
+            - ~/.m2
+
+       # Run the integration Tests.
       - run:
-          name: Test
-          command: mvn test
+          name: Build & Test
+          command: mvn integration-test
+
+      - run:
+          name: Deploy to packagecloud
+          command: mvn deploy -s ./settings.xml
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  deploy:
     jobs:
-      - build-and-test
+      - build-test-deploy
